welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:31: error: type mismatch;
 found   : Int
 required: Boolean
		if (possuivante() && (cote%2)) {
                                          ^