welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
override def run() {
def posfinale(): Boolean = {
	var h = getMondeHauteur()-1;
	var l = getMondeLargeur()-1;
	if (getX() == l && getY() == h) {
		return true;
	} else {
		return false;
	}
	 
}

def possuivante():Boolean = {
	if (estDosMur()) {
		return false; 
	} else {
		return true;
	}
}


def deplace() = {
	var cpt = 0;
	var c = 0;
	var l = 0;
	var cote = 0;
	var h = getMondeHauteur()-1;
	ecritMessage(cpt);
	gauche();
	while (!(posfinale())) {
		if (possuivante() && (cote%2)) {
		c=c+1;
			setPos(c,l);
		} else {
			l = l+1;
			setPos(c,l);
		}
		(cpt = cpt + 1);
		 ecritMessage(cpt);
	}
	droite();
}
deplace();
}